# geometry

./: .angular-cli.json  .bazelrc  .editorconfig  .eslintrc.json  .gitignore  .travis.yml  BUILD.bazel  CHANGELOG.md  CODE_REVIEWS.md  Dockerfile  Dockerfile-dev-app  Jenkinsfile  LICENSE  README.md  WORKSPACE  angular-tsconfig.json  angular.json  build-config.js  gulpfile.js  jest.config.js  karma.conf.js  nx.json  package-bazel.json  package-lock.json  package.json  packages.bzl  protractor.conf.js  rollup-globals.bzl  rollup-node-globals.bzl  test.js  test.yaml  tsconfig.app.json  tsconfig.base.json  tsconfig.e2e.json  tsconfig.json  tsconfig.spec.json  tslint.json
libs/triangle/desc-list/: BUILD.bazel
libs/triangle/drawer/: BUILD.bazel  public-api.ts
libs/triangle/pagination/: BUILD.bazel  package.json  public-api.ts  tsconfig-build.json
libs/triangle/prebuilt-themes/: BUILD.bazel
libs/triangle/transfer/: BUILD.bazel  patch.less  public-api.ts  tsconfig-build.json
libs/triangle/tree-view/: BUILD.bazel  LICENSE.md  public-api.ts
src/: BUILD.bazel  __ngcc_entry_points__.json  bazel-tsconfig-build.json
src/annotation/: BUILD.bazel  LICENSE.md  config.bzl  jest.config.js  package.json  tsconfig.json
src/annotation/src/: decorators.ts
src/annotation/test/: annotation.spec.ts
src/auth/: BUILD.bazel  LICENSE.md  config.bzl  jest.config.js  package.json  public-api.ts  tsconfig-tests.json
src/auth/src/: auth.module.ts  auth.options.ts
src/check-type/: BUILD.bazel  READMD.md  config.bzl  jest.config.js  package.json  public-api.ts
src/check-type/src/: check-type.ts
src/check-type/test/: check-type.spec.ts
src/color/: BUILD.bazel  config.bzl  index.ts  jest.config.js  package.json  public-api.ts  tsconfig-tests.json
src/color/src/: color.ts  common.ts  const.ts  cubehelix.ts  hcl.ts  helper.ts  hsl.ts  lab.ts  rgb.ts
src/color/test/: color.spec.ts  hcl.spec.ts  hsl.spec.ts  lab.spec.ts  rgb.spec.ts  test-helper.ts
src/cube/: BUILD.bazel  config.bzl  index.ts  package.json  tsconfig-tests.json  tsconfig.json
src/cube/diagram/: BUILD.bazel  config.bzl  index.ts  tsconfig-tests.json
src/cube/gantt/: BUILD.bazel  public-api.ts
src/date-math/: BUILD.bazel  config.bzl  jest.config.js  package.json  public-api.ts  tsconfig-tests.json
src/date-math/src/: date-math.ts  format.ts
src/dev-app/: BUILD.bazel  _dev-app-theme.scss  dev-app.ts  index.html  jest.config.js  main-module.ts  main.ts  rollup.config.js  theme.scss  tsconfig.json
src/dev-app/accordion/: BUILD.bazel  dev-accordion.html  dev-accordion.module.ts  dev-accordion.ts
src/dev-app/alert/: BUILD.bazel  dev-alert.html  dev-alert.module.ts
src/dev-app/avatar/: BUILD.bazel  dev-avatar.html
src/dev-app/badge/: dev-badge.component.ts  dev-badge.html  dev-badge.module.ts
src/dev-app/breadcrumb/: BUILD.bazel  dev-breadcrumb.component.ts  dev-breadcrumb.html  dev-breadcrumb.module.ts
src/dev-app/button/: BUILD.bazel  dev-button.html  dev-button.module.ts  dev-button.spec.ts  dev-button.ts
src/dev-app/button-toggle/: dev-button-toggle.ts
src/dev-app/calendar/: dev-calendar.module.ts  dev-calendar.ts
src/dev-app/card/: BUILD.bazel  dev-card.html  dev-card.module.ts  dev-card.spec.ts  dev-card.ts
src/dev-app/carousel/: dev-carousel.ts
src/dev-app/cascader/: BUILD.bazel  dev-cascader.html  dev-cascader.module.ts  dev-cascader.ts
src/dev-app/checkbox/: dev-checkbox.html  dev-checkbox.module.ts  dev-checkbox.ts
src/dev-app/collapse/: BUILD.bazel  dev-collapse.html  dev-collapse.module.ts  dev-collapse.spec.ts  dev-collapse.ts
src/dev-app/combobox/: BUILD.bazel  dev-combobox.module.ts  dev-combobox.ts
src/dev-app/confirm-popup/: BUILD.bazel  dev-confirm-popup.html  dev-confirm-popup.module.ts
src/dev-app/cube/: BUILD.bazel  dev-cube.component.ts  dev-cube.html  dev-cube.module.ts
src/dev-app/dev-app/: BUILD.bazel  dev-app-404.ts  dev-app-home.ts  dev-app-layout.html  dev-app-layout.ts  dev-app-module.ts  routes.ts
src/dev-app/dev-layout/: dev-layout-module.ts
src/dev-app/diagram/: BUILD.bazel  dev-diagram.html  dev-diagram.module.ts
src/dev-app/dialog/: BUILD.bazel  dev-dialog.html  dev-dialog.module.ts  dev-dialog.ts
src/dev-app/dnd/: BUILD.bazel  dev-dnd.module.ts  dev-dnd.ts  dev-drag-and-drop.html  dev-drag-and-drop.module.ts  dev-drag-and-drop.scss
src/dev-app/drag-and-drop/: BUILD.bazel  dev-drag-and-drop.component.ts  dev-drag-and-drop.html  dev-drag-and-drop.module.ts
src/dev-app/drawer/: BUILD.bazel  dev-drawer.module.ts  dev-drawer.ts
src/diagram/: BUILD.bazel  README.md  config.bzl  index.ts  package.json  tsconfig-tests.json  tsconfig.json
src/easing/: BUILD.bazel  config.bzl  index.ts  package.json
src/easing/src/: back.ts  (+11 more)
src/fedaco/: BUILD.bazel  README.md  config.bzl  jest.config.js  package.json  public-api.ts  tsconfig-tests.json  tsconfig.json  tsconfig.spec.json
src/injection/: BUILD.bazel  config.bzl
src/interpolate/: BUILD.bazel  config.bzl  index.ts  package.json  public-api.ts  tsconfig-tests.json  tsconfig.json
src/iterator/: BUILD.bazel  config.bzl  package.json  tsconfig-tests.json
src/pinara/: BUILD.bazel  config.bzl  jest.config.js  package.json  tsconfig-tests.json  tsconfig.json  version.ts
src/reiki-ast/: README.md  jest.config.js  tslint.json
src/security/: BUILD.bazel  LICENSE.md  config.bzl  jest.config.js  package.json  public-api.ts  tsconfig-tests.json
src/stream-buffer/: BUILD.bazel  config.bzl  tsconfig.json
src/triangle/: BUILD.bazel  config.bzl  index.ts  package.json  public-api.ts  triangle.scss  tsconfig.json  tsconfig.lib.json  tsconfig.spec.json  version.ts
src/triangle-examples/: BUILD.bazel  example-data.ts  example-module.ts  index.ts  package.json  public_api.ts  triangle-module.ts  tsconfig-build.json
src/triangle-icons/: BUILD.bazel  config.bzl  package.json  public-api.ts
src/vector-math/: BUILD.bazel  config.bzl  jest.config.js  package.json  public-api.ts
src/websocket-client/: BUILD.bazel  config.bzl  package.json
tools/public_api_guard/: BUILD.bazel  generate-guard-tests.bzl
(+7205 files in other folders)
