package(default_visibility = ["//visibility:public"])

load("//:rollup-globals.bzl", "ROLLUP_GLOBALS")
load("//src/triangle:config.bzl", "TRIANGLE_ENTRYPOINTS", "TRIANGLE_TESTING_ENTRYPOINTS")

exports_files([
    "LICENSE",
    "scss-bundle.config.json",
])

genrule(
    name = "rollup_globals",
    outs = ["rollup_globals.json"],
    cmd = "echo '%s' > $@" % ROLLUP_GLOBALS,
)

entryPoints = ["triangle/%s" % e for e in TRIANGLE_ENTRYPOINTS + TRIANGLE_TESTING_ENTRYPOINTS]

genrule(
    name = "entry_points_manifest",
    outs = ["entry_points_manifest.json"],
    cmd = "echo '%s' > $@" % entryPoints,
)
