load("@npm//scss-bundle:index.bzl", "scss_bundle")
load(
    "//src/annotation:config.bzl",
    "ANNOTATION_TARGETS",
)
load("//tools:defaults.bzl", "ng_package", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "annotation",
    srcs = glob(
        ["**/*.ts"],
        exclude = [
            "test/**/*.ts",
            "**/*.spec.ts",
        ],
    ),
    module_name = "@gradii/annotation",
)

ng_package(
    name = "npm_package",
    srcs = [
        "package.json",
    ],
    data = [
    ],
    entry_point = ":index.ts",
    entry_point_name = "annotation",
    nested_packages = [],
    tags = ["release-package"],
    deps = ANNOTATION_TARGETS,
)
