load("@npm//scss-bundle:index.bzl", "scss_bundle")
load(
    "//src/date-math:config.bzl",
    "DATE_MATH_TARGETS",
)
load("//tools:defaults.bzl", "ng_package", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "date-math",
    srcs = glob(
        ["**/*.ts"],
        exclude = [
            "test/**/*.ts",
            "**/*.spec.ts",
        ],
    ),
    module_name = "@gradii/date-math",
)

ng_package(
    name = "npm_package",
    srcs = [
        "package.json",
    ],
    data = [
    ],
    entry_point = ":index.ts",
    entry_point_name = "date-math",
    nested_packages = [],
    tags = ["release-package"],
    deps = DATE_MATH_TARGETS,
)
