load("@npm//scss-bundle:index.bzl", "scss_bundle")
load(
    "//src/easing:config.bzl",
    "EASING_TARGETS",
)
load("//tools:defaults.bzl", "ng_package", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "easing",
    srcs = glob(
        ["**/*.ts"],
        exclude = [
            "test/**/*.ts",
            "**/*.spec.ts",
        ],
    ),
    module_name = "@gradii/easing",
)

ng_package(
    name = "npm_package",
    srcs = [
        "package.json",
    ],
    data = [
    ],
    entry_point = ":index.ts",
    entry_point_name = "easing",
    nested_packages = [],
    tags = ["release-package"],
    deps = EASING_TARGETS,
)
