load("@npm//scss-bundle:index.bzl", "scss_bundle")
load(
    "//src/fedaco:config.bzl",
    "FEDACO_TARGETS",
)
load("//tools:defaults.bzl", "ng_package", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "fedaco",
    srcs = glob(
        ["**/*.ts"],
        exclude = [
            "test/**/*.ts",
            "**/*.spec.ts",
        ],
    ),
    deps = [
       "@npm//date-fns",
       "//src/check-type:check-type",
    ],
    module_name = "@gradii/fedaco",
)

ng_package(
    name = "npm_package",
    srcs = [
        "package.json",
    ],
    data = [
    ],
    entry_point = ":index.ts",
    entry_point_name = "fedaco",
    nested_packages = [],
#    tags = ["release-package"],
    deps = FEDACO_TARGETS,
)
