load("@npm//scss-bundle:index.bzl", "scss_bundle")
load(
    "//src/injection:config.bzl",
    "ANNOTATION_TARGETS",
)
load("//tools:defaults.bzl", "ng_package", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "injection",
    srcs = glob(
        ["**/*.ts"],
        exclude = [
            "test/**/*.ts",
            "**/*.spec.ts",
        ],
    ),
    module_name = "@gradii/injection",
)

ng_package(
    name = "npm_package",
    srcs = [
        "package.json",
    ],
    data = [
    ],
    entry_point = ":index.ts",
    entry_point_name = "injection",
    nested_packages = [],
    tags = ["release-package"],
    deps = ANNOTATION_TARGETS,
)
