package(default_visibility=["//visibility:public"])

load("//tools:sass_bundle.bzl", "sass_bundle")
load("//tools:defaults.bzl", "ng_module", "ng_package")
load("//:packages.bzl", "TRIANGLE_PACKAGES", "TRIANGLE_TARGETS", "TRIANGLE_SCSS_LIBS",
    "ROLLUP_GLOBALS")

# Root "@angular/material" entry-point.
ng_module(
  name = "triangle",
  srcs = glob(["*.ts"], exclude=["**/*.spec.ts"]),
  module_name = "@gradii/triangle",
  deps = ["//src/triangle/%s" % p for p in TRIANGLE_PACKAGES] + [
    "@npm//@angular/common",
    "@npm//@angular/forms",
    "@npm//@angular/animations",
  ],
)

sass_bundle(
  name = "theming_bundle",
  srcs = [
  ] + TRIANGLE_SCSS_LIBS,
  entry_point = '//src/triangle/core:style/themes/_all-theme.scss',
  output_name = "_theming.scss",
)

#filegroup(
#  name = "overviews",
#  srcs = ["//src/lib/%s:overview" % name for name in TRIANGLE_PACKAGES]
#)

# Creates the @angular/material package published to npm.
ng_package(
  name = "npm_package",
  srcs = ["package.json"],
  entry_point = ":public-api.ts",
  entry_point_name = "triangle",
  globals = ROLLUP_GLOBALS,
  data = [
    ":theming_bundle",
#    "//src/lib/prebuilt-themes:indigo-pink",
#    "//src/lib/prebuilt-themes:deeppurple-amber",
#    "//src/lib/prebuilt-themes:pink-bluegrey",
#    "//src/lib/prebuilt-themes:purple-green",
  ],
  packages = [
#      "//src/lib/schematics:npm_package"
  ],
  deps = TRIANGLE_TARGETS,
  tags = ["manual"],
)
