package(default_visibility = ["//visibility:public"])

load("@npm//scss-bundle:index.bzl", "scss_bundle")
load(
    "//src/triangle:config.bzl",
    "TRIANGLE_ENTRYPOINTS",
    "TRIANGLE_ENTRYPOINTS_WITH_STYLES",
    "TRIANGLE_SCSS_LIBS",
    "TRIANGLE_TARGETS",
    "TRIANGLE_TESTING_TARGETS"
)
load("//tools:defaults.bzl", "ng_package", "ts_library")

ts_library(
    name = "triangle",
    srcs = ["index.ts"],
    module_name = "@gradii/triangle",
)

scss_bundle(
    name = "theming_bundle",
    outs = ["_theming.scss"],
    args = [
        "--entryFile=$(location //src/triangle/core:themes/_all-theme.scss)",
        "--outFile=$(location :_theming.scss)",
    ],
    data = TRIANGLE_SCSS_LIBS + [
        "//src/triangle/core:themes/_all-theme.scss",
        # Config file is required by "scss-bundle" and will be automatically
        # loaded by the CLI. It expects the config to be in the execroot.
        "//:scss-bundle.config.json",
    ],
)

# Creates the @angular/material package published to npm.
ng_package(
    name = "npm_package",
    srcs = [
        "package.json",
    ],
    data = [
        ":theming_bundle",
        #        "//src/triangle/core:theming_scss_lib",
        #        "//src/triangle/prebuilt-themes:deeppurple-amber",
        "//src/triangle/prebuilt-themes:indigo-pink",
        #        "//src/triangle/prebuilt-themes:pink-bluegrey",
        #        "//src/triangle/prebuilt-themes:purple-green",
    ] + TRIANGLE_SCSS_LIBS,
    entry_point = ":index.ts",
    entry_point_name = "triangle",
    nested_packages = [],
    tags = ["release-package"],
    deps = TRIANGLE_TARGETS,
)

filegroup(
    name = "overviews",
    # Only secondary entry-points declare overview files currently. Entry-points
    # which contain a slash are not in the top-level and do not have an overview.
    srcs = ["//src/triangle/%s:overview" % ep for ep in TRIANGLE_ENTRYPOINTS if not "/" in ep],
)
