load("@npm//scss-bundle:index.bzl", "scss_bundle")
load(
    "//src/triangle:config.bzl",
    "TRIANGLE_ENTRYPOINTS",
    "TRIANGLE_SCSS_LIBS",
    "TRIANGLE_TARGETS",
)
load("//tools:defaults.bzl", "ng_package", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "triangle",
    srcs = ["index.ts"],
    module_name = "@gradii/triangle",
)

# Creates the @angular/material package published to npm.
ng_package(
    name = "npm_package",
    srcs = [
        "package.json",
    ],
    data = [
        #        "//src/triangle/core:theming_scss_lib",
        #        "//src/triangle/prebuilt-themes:deeppurple-amber",
        "//src/triangle/prebuilt-themes:indigo-pink",
        #        "//src/triangle/prebuilt-themes:pink-bluegrey",
        #        "//src/triangle/prebuilt-themes:purple-green",
    ] + TRIANGLE_SCSS_LIBS,
    entry_point = ":index.ts",
    nested_packages = [],
    tags = ["release-package"],
    deps = TRIANGLE_TARGETS,
)

filegroup(
    name = "overviews",
    # Only secondary entry-points declare overview files currently. Entry-points
    # which contain a slash are not in the top-level and do not have an overview.
    srcs = ["//src/triangle/%s:overview" % ep for ep in TRIANGLE_ENTRYPOINTS if not "/" in ep],
)
