load("@npm//scss-bundle:index.bzl", "scss_bundle")
load(
    "//src/vector-math:config.bzl",
    "VECTOR_MATH_TARGETS",
)
load("//tools:defaults.bzl", "ng_package", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "vector-math",
    srcs = glob(
        ["**/*.ts"],
        exclude = [
            "test/**/*.ts",
            "**/*.spec.ts",
        ],
    ),
    module_name = "@gradii/vector-math",
)

ng_package(
    name = "npm_package",
    srcs = [
        "package.json",
    ],
    data = [
    ],
    entry_point = ":index.ts",
    entry_point_name = "vector-math",
    nested_packages = [],
    tags = ["release-package"],
    deps = VECTOR_MATH_TARGETS,
)
