load("//src/triangle:config.bzl", "TRIANGLE_ENTRYPOINTS", "TRIANGLE_TESTING_ENTRYPOINTS")
load(":generate-guard-tests.bzl", "generate_test_targets")

package(default_visibility = ["//visibility:public"])

golden_files = ["triangle/%s.d.ts" % e for e in TRIANGLe_ENTRYPOINTS + TRIANGLE_TESTING_ENTRYPOINTS] + [
    # Primary entry-points.
    "cdk/cdk.d.ts",
    "material/material.d.ts",
    "youtube-player/youtube-player.d.ts",
    "google-maps/google-maps.d.ts",
]

# Generate the API guard test targets for each golden file in the current package.
generate_test_targets(golden_files)
