load(
    "//tools:defaults.bzl",
    "ng_module",
    "sass_binary",
    "sass_library",
    #  "ng_test_library",
    #  "ng_web_test_suite",
    #  "markdown_to_html"
)

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "desc-list",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    assets = [":style/desc-list.css"] + glob(["**/*.html"]),
    module_name = "@gradii/triangle/desc-list",
    deps = [
        "//src/triangle/core",
        "//src/triangle/grid",
        "//src/triangle/i18n",
        "//src/triangle/util",
        "@npm//@angular/animations",
        "@npm//@angular/cdk",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//rxjs",
    ],
)

sass_library(
    name = "desc_list_scss_lib",
    srcs = glob(["**/_*.scss"]),
    deps = ["//src/triangle/core:core_scss_lib"],
)

sass_binary(
    name = "desc_list_scss",
    src = "style/desc-list.scss",
    deps = [
        "//src/triangle/desc-list:desc_list_scss_lib",
    ],
)
#
#ng_test_library(
#  name = "autocomplete_test_sources",
#  srcs = glob(["**/*.spec.ts"]),
#  deps = [
#    "@npm//@angular/forms",
#    "@npm//@angular/platform-browser",
#    "@npm//rxjs",
#    "//src/cdk/bidi",
#    "//src/cdk/keycodes",
#    "//src/cdk/overlay",
#    "//src/cdk/scrolling",
#    "//src/cdk/testing",
#    "//src/lib/core",
#    "//src/lib/form-field",
#    "//src/lib/input",
#    ":autocomplete"
#  ]
#)
#
#ng_web_test_suite(
#  name = "unit_tests",
#  deps = [":autocomplete_test_sources"],
#)
#
#markdown_to_html(
#  name = "overview",
#  srcs = [":affix.md"],
#)

filegroup(
    name = "source-files",
    srcs = glob(["**/*.ts"]),
)
