load(
    "//tools:defaults.bzl",
    "ng_module",
    "sass_binary",
    "sass_library",
    #  "ng_test_library",
    #  "ng_web_test_suite",
    #  "markdown_to_html"
)

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "transfer",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    assets = [":style/transfer.css"] + glob(["**/*.html"]),
    module_name = "@gradii/triangle/transfer",
    deps = [
        "@npm//@angular/animations",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//@angular/cdk",
        "@npm//rxjs",
        "//src/triangle/button",
        "//src/triangle/checkbox",
        "//src/triangle/input",
        #    "//src/triangle/locale",
        "//src/triangle/core",
        "//src/triangle/util",
        "//src/triangle/i18n",
    ],
)

sass_library(
    name = "transfer_scss_lib",
    srcs = glob(["**/_*.scss"]),
    deps = ["//src/triangle/core:core_scss_lib"],
)

sass_binary(
    name = "transfer_scss",
    src = "style/transfer.scss",
    deps = [
        "//src/triangle/transfer:transfer_scss_lib",
    ],
)
#
#ng_test_library(
#  name = "autocomplete_test_sources",
#  srcs = glob(["**/*.spec.ts"]),
#  deps = [
#    "@npm//@angular/forms",
#    "@npm//@angular/platform-browser",
#    "@npm//rxjs",
#    "//src/cdk/bidi",
#    "//src/cdk/keycodes",
#    "//src/cdk/overlay",
#    "//src/cdk/scrolling",
#    "//src/cdk/testing",
#    "//src/lib/core",
#    "//src/lib/form-field",
#    "//src/lib/input",
#    ":autocomplete"
#  ]
#)
#
#ng_web_test_suite(
#  name = "unit_tests",
#  deps = [":autocomplete_test_sources"],
#)
#
#markdown_to_html(
#  name = "overview",
#  srcs = [":affix.md"],
#)

filegroup(
    name = "source-files",
    srcs = glob(["**/*.ts"]),
)
