load(
    "//tools:defaults.bzl",
    "ng_module",
    "sass_binary",
    "sass_library",
    "ng_test_library",
    "ng_web_test_suite",
    #  "markdown_to_html"
)

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "tree-view",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts", "testing/**/*.ts"],
    ),
    assets = [
      ":style/tree-view.css",
      ":style/components/tree-loading.component.css",
      ":style/components/tree-node-children.component.css",
      ":style/components/tree-node-content.component.css",
      ":style/components/tree-node-drop-slot.component.css",
      ":style/components/tree-node-expander.component.css",
      ":style/components/tree-node-wrapper.component.css",
      ":style/components/tree-node.component.css",
      ":style/components/tree-viewport.component.css",
      ":style/components/tree.component.css"
    ] + glob(["**/*.html"]),
    module_name = "@gradii/triangle/tree-view",
    deps = [
        "//src/triangle/core",
        "//src/triangle/i18n",
        "//src/triangle/icon",
        "//src/check-type",
        "@npm//@angular/animations",
        "@npm//@angular/cdk",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//rxjs",
        "@npm//uuid",
    ],
)

sass_library(
    name = "tree_view_scss_lib",
    srcs = glob(["**/_*.scss"]),
    deps = ["//src/triangle/core:core_scss_lib"],
)

sass_binary(
    name = "tree_view_scss",
    src = "style/tree-view.scss",
    deps = [
        "//src/triangle/tree-view:tree_view_scss_lib",
    ],
)

sass_binary(
    name = "tree_loading_component_scss",
    src = "style/components/tree-loading.component.scss",
    deps = [
        "//src/triangle/tree-view:tree_view_scss_lib",
    ],
)


sass_binary(
    name = "tree_node_children_component_scss",
    src = "style/components/tree-node-children.component.scss",
    deps = [
        "//src/triangle/tree-view:tree_view_scss_lib",
    ],
)

sass_binary(
  name = "tree_node_content_component_scss",
  src = "style/components/tree-node-content.component.scss",
  deps = [
    "//src/triangle/tree-view:tree_view_scss_lib",
  ],
)

sass_binary(
  name = "tree_node_drop_slot_component_scss",
  src = "style/components/tree-node-drop-slot.component.scss",
  deps = [
    "//src/triangle/tree-view:tree_view_scss_lib",
  ],
)

sass_binary(
  name = "tree_node_expander_component_scss",
  src = "style/components/tree-node-expander.component.scss",
  deps = [
    "//src/triangle/tree-view:tree_view_scss_lib",
  ],
)

sass_binary(
  name = "tree_node_wrapper_component_scss",
  src = "style/components/tree-node-wrapper.component.scss",
  deps = [
    "//src/triangle/tree-view:tree_view_scss_lib",
  ],
)

sass_binary(
  name = "tree_node_component_scss",
  src = "style/components/tree-node.component.scss",
  deps = [
    "//src/triangle/tree-view:tree_view_scss_lib",
  ],
)

sass_binary(
  name = "tree_viewport_component_scss",
  src = "style/components/tree-viewport.component.scss",
  deps = [
    "//src/triangle/tree-view:tree_view_scss_lib",
  ],
)

sass_binary(
  name = "tree_component_scss",
  src = "style/components/tree.component.scss",
  deps = [
    "//src/triangle/tree-view:tree_view_scss_lib",
  ],
)

ng_test_library(
  name = "tree_view_test_sources",
  srcs = glob(
    ["**/*.spec.ts"],
    exclude = ["**/*.e2e.spec.ts"],
  ),
  deps = [
    ":tree-view",
    "//src/triangle/core",
    "@npm//@angular/forms",
    "@npm//@angular/platform-browser",
    "@npm//rxjs",
  ]
)

ng_web_test_suite(
  name = "unit_tests",
  deps = [":tree_view_test_sources"],
)
#
#markdown_to_html(
#  name = "overview",
#  srcs = [":affix.md"],
#)

filegroup(
    name = "source-files",
    srcs = glob(["**/*.ts"]),
)
