load("//tools:defaults.bzl", "ng_module", "sass_binary")

package(default_visibility = ["//visibility:public"])

ng_module(
    name = "accordion",
    srcs = glob(["**/*.ts"], exclude = ["**/*.spec.ts"],),
    assets = [
        "dev-accordion.html",
        ":dev_accordion_scss",
    ],
    deps = [
        "//src/triangle/accordion",
        "@npm//@angular/forms",
        "@npm//@angular/router",
    ],
)

sass_binary(
    name = "dev_accordion_scss",
    src = "dev-accordion.scss",
)
